[package]
name = "app"
version = "0.1.0"
authors = ["Jake Kile <jkile9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cli = { path = "../cli" }
tcp = { path = "../tcp" }
game-logic = { path = "../game-logic" }